--- a/prepros.config
+++ b/prepros.config
@@ -913,6 +913,25 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "app/app.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "css/styles.css",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "model/model.js",
+        "config": {
+          "autoCompile": true
+        }
+      }
+    ]
   }
 }
