--- a/prepros.config
+++ b/prepros.config
@@ -915,6 +915,12 @@
     },
     "files": [
       {
+        "file": "README.md",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "app/app.js",
         "config": {
           "autoCompile": true
