--- a/prepros.config
+++ b/prepros.config
@@ -933,9 +933,141 @@
         }
       },
       {
+        "file": "lib/jquery-3.6.0.min.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "model/model.js",
         "config": {
           "autoCompile": true
+        }
+      },
+      {
+        "file": "scss/about.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/blog.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/blog/blog1.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/blog/blog2.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/blog/blog3.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/blog/blog4.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/blog/blog5.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/contact.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/gallery.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/gallery/gallery1.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/gallery/gallery2.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/gallery/gallery3.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/gallery/gallery4.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/gallery/gallery5.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/hero.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/home.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/home/hero.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/mixins.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/nav.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/structure.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/variables.scss",
+        "config": {
+          "compileImported": true
         }
       }
     ]
