--- a/prepros.config
+++ b/prepros.config
@@ -941,7 +941,8 @@
       {
         "file": "model/model.js",
         "config": {
-          "autoCompile": true
+          "autoCompile": true,
+          "compileImported": true
         }
       },
       {
@@ -1042,6 +1043,12 @@
       },
       {
         "file": "scss/home/hero.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/home/nav.scss",
         "config": {
           "compileImported": true
         }
