--- a/prepros.config
+++ b/prepros.config
@@ -941,8 +941,8 @@
       {
         "file": "model/model.js",
         "config": {
-          "autoCompile": true,
-          "compileImported": true
+          "compileImported": true,
+          "autoCompile": true
         }
       },
       {
