--- a/prepros.config
+++ b/prepros.config
@@ -927,6 +927,12 @@
         }
       },
       {
+        "file": "css/gallery.css",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "css/styles.css",
         "config": {
           "autoCompile": true
@@ -994,6 +1000,12 @@
         }
       },
       {
+        "file": "scss/footer/footer.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
         "file": "scss/gallery.scss",
         "config": {
           "compileImported": true
@@ -1043,6 +1055,12 @@
       },
       {
         "file": "scss/home/hero.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/home/home.scss",
         "config": {
           "compileImported": true
         }
